{
    "name": "New Controls",
    "maps": [
        {
            "name": "Player",
            "id": "3313e92e-a0ac-4849-816c-310b0c9e4a02",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "98dca99c-ed90-4383-8077-ab4f072791fe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HeadAiming",
                    "type": "Value",
                    "id": "8e5796be-7204-4e77-992d-df67911af801",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "LegAiming",
                    "type": "Value",
                    "id": "c9091c77-9ee2-45fd-9e21-7670aa00a0f4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "7f0e6170-1ddd-4b2a-a4e8-e38aa701b71c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Moving",
                    "type": "Value",
                    "id": "bf85d237-ddfe-4763-b5c2-9fe3929b961c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "6341e467-3398-48c3-b977-aee5d7f9347e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "614f9c30-c53e-4aa4-822c-67ce2eff6ee9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.5),Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Equip",
                    "type": "Button",
                    "id": "f837fa50-fe55-433e-ac16-c33c26d5e964",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.5)",
                    "initialStateCheck": true
                },
                {
                    "name": "UnEquip",
                    "type": "Button",
                    "id": "899cc2d4-fc6f-43bd-8ebd-dd3fbb50d690",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BackSlide",
                    "type": "Button",
                    "id": "bb3dd8ad-d326-413f-b422-aa8928422b01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CheckedEquipedBullet",
                    "type": "Value",
                    "id": "4133df2e-fcfb-4538-a3c7-583bd3b38ddf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeSlot",
                    "type": "Value",
                    "id": "2805ba54-e335-4764-9e3d-ae37585668e4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "20f70d67-25a3-47d2-b287-b93e13d8786c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c149410-af75-46c9-8881-cfdea65b485e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeadAiming",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5796c771-ca88-4ad1-806a-5944da4a4488",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LegAiming",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4553b20a-e410-43b1-be75-9e78abe3666e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "faa360cc-ac2e-4f2d-8d3c-45ad47a7be28",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "079d84b7-4b03-4f93-9fae-1c475a1d5f50",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8d18e855-0a2c-411b-8af1-c67470300212",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2f442853-0192-4d78-b24c-cfef957cb2cf",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd6582fc-4668-4ebd-90b0-981fd4be0d45",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be063e4c-d614-4713-bc8c-7a7fe24d6d80",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Equip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ce6f2c0-adb3-4367-9ce3-a93f7f012748",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnEquip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "e73a58c5-8ad8-40a4-9813-a8938498f778",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackSlide",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "470f9889-8cb2-433f-9349-e3071fa3becb",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackSlide",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "ab682f94-cae9-4905-aa6a-3f3f0f9d40c5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackSlide",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "12ac9491-c7db-4440-a7c2-2ab6934449da",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CheckedEquipedBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77d5d05d-048d-46d0-b208-347acf352f1f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "ChangeSlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36745eba-dadc-4466-b817-614e953a2e0d",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "ChangeSlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40d66d98-88e6-4bb4-bfc5-0f37b8c77cfa",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "ChangeSlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6111dd2-f33d-489b-8b3f-697b6ffa93cc",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "ChangeSlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}